@@ -3,6 +3,7 @@ Revision history for Music-BachChoralHarmony
 {{$NEXT}}
     - Improve the eq/ roman numeral analysis programs a bit more.
     - Fix the distribution file exclusions.
+    - Make the parse data a proper attribute.
 
 0.0105 2018-11-05 15:58:25
     - Improve the eq/ roman numeral analysis programs.
